# pddshap

./: .gitignore  pyproject.toml
experiments/: datasets.yaml
experiments/real/: datasets.py  train_models.py
experiments/real/vary_fraction_variance/: result_reader.py  vary_fraction_variance.py
experiments/synthetic/: multilinear_polynomial.py  test_partial_dependence_decomposition.py  test_subset_selector.py  test_variance_estimator.py
src/pddshap/: partial_dependence_decomposition.py  pdd_component.py
src/pddshap/estimator/: __init__.py  constant_pdd_estimator.py  forest_pdd_estimator.py  gaussian_process_pdd_estimator.py  gradient_boosting_pdd_estimator.py  knn_pdd_estimator.py  pdd_estimator.py  tree_pdd_estimator.py
src/pddshap/signature/: data_signature.py  feature_subset.py
src/pddshap/variance/: coe_tracker.py  variance_estimator.py
